fix overflow bug in .navbar

--- a/css/scraperstrap.css
+++ b/css/scraperstrap.css
@@ -551,6 +551,7 @@ input[type="color"],
 
 .navbar .container {
   margin-bottom: 0;
+  overflow: visible;
 }
 
 @media only screen and (min-width: 620px) {
